# near-light-client

./: .dockerignore  .env.example  .gitignore  .gitmodules  .taplo.toml  Cargo.toml  Dockerfile  Dockerfile.offchain  Dockerfile.operator  Makefile  README.md  bruno.json  config.toml  default.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml  state.json  statelessnet.toml  succinct.json  test.json  testnet.toml
.github/workflows/: dependency_audit.yml  on_main.yml  on_pull_request.yml
api/: README.md
api/NEAR Light Client/: .env.sample  bruno.json
api/NEAR Light Client/Light Client/: Proof (Transaction).bru
api/NEAR Light Client/Light Client/Operator/: Req proof (push).bru  Req proof (sync).bru  Req proof (verify).bru
api/NEAR Light Client/Succinct/: Deployment new test.bru  Get Deployments.bru  Get proof status.bru  Get proofs.bru  Get request status.bru  Req proof (batch).bru  Req proof (sync).bru  Req proof (verify).bru
api/NEAR Light Client/Succinct/Deploy/: Check Release Status.bru  New Entrypoint.bru  Pull Verifying Key.bru  Update name.bru
api/NEAR Light Client/environments/: local.bru  testnet.bru
api/light-client/: Header: By epoch.bru  Header: Head.bru  Proof (Receipt).bru  Proof[Experimental]: Receipt.bru  Verify[Experimental].bru
api/light-client/operator/: push.bru  sync.bru
api/light-client/raw/: Get Block.bru  Get Chunk.bru  Get Transaction.bru  Light Client Proof (Receipt).bru  Light Client Proof (Transaction).bru  Next Light Client Block.bru  Protocol config.bru
api/succinct/: Get Deployments.bru  Get proof status.bru  Get proofs.bru  Get request status.bru  Release Verify.bru  Release: DEL.bru  Req proof (batch).bru  Req proof (sync).bru
api/succinct/deploy/: check.bru  new-deployment.bru  notify-deployment.bru  pull-vk.bru  update-name.bru
circuits/plonky2x/: Cargo.toml
circuits/plonky2x/contract/: foundry.toml
circuits/plonky2x/contract/script/: Deploy.s.sol  Initialise.s.sol  Upgrade.s.sol
circuits/plonky2x/contract/src/: NearX.sol
circuits/plonky2x/contract/src/interfaces/: Bytes.sol  INearX.sol
circuits/plonky2x/contract/test/: NearX.t.sol
circuits/plonky2x/contracts/: foundry.toml
circuits/plonky2x/contracts/script/: Deploy.s.sol
circuits/plonky2x/contracts/src/: NearX.sol
circuits/plonky2x/contracts/src/interfaces/: INearX.sol
circuits/plonky2x/contracts/test/: NearX.t.sol
circuits/plonky2x/src/: batch.rs  builder.rs  codec.rs  hint.rs  lib.rs  main.rs  merkle.rs  test_utils.rs  variables.rs
circuits/plonky2x/src/circuits/: mod.rs  sync.rs  verify.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: config.rs  lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: config.rs  experimental.rs  lib.rs  merkle_util.rs  prelude.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  prelude.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
environments/: local.bru  testnet.bru
fixtures/: 1.json  1_current_epoch.json  2_previous_epoch.json  3_previous_epoch.json  86673090.json  86673091.json  86673092.json  batch.json  deployments.json  input.bytes.json  sync_proof.json  verify_proof.json  well_known_header.json
nearx/: Cargo.toml
nearx/contract/: abi.json  foundry.toml
nearx/contract/script/: DefenderProxy.s.sol  Deploy.s.sol  DeployAndRegisterVerifier.sol  Initialise.s.sol  Proxy.s.sol  RequestSync.s.sol  RequestVerify.s.sol  UpdateParams.s.sol  Upgrade.s.sol  Verify.s.sol
nearx/contract/src/: NearX.sol
nearx/contract/src/interfaces/: INearX.sol
nearx/contract/test/: NearX.t.sol
nearx/src/: builder.rs  config.rs  hint.rs  lib.rs  main.rs  merkle.rs  sync.rs  test_utils.rs  variables.rs  verify.rs
scripts/: bruno.sh  build-circuit.sh  fetch-deployment-info.sh  forge-script.sh  prove-circuit.sh
src/: config.rs  controller.rs  erasure.rs  gossip.rs  main.rs
src/client/: error.rs  message.rs  mod.rs  proof.rs  rpc.rs  store.rs
src/client/proof/: merkle_util.rs
src/client/protocol/: experimental.rs  merkle_util.rs  mod.rs
src/erasure/: commit.rs  store.rs
src/near/: block_header.rs  config.rs  merkle.rs  mod.rs  rpc.rs  views.rs
