[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.0"

[workspace]
members  = [ "bin/*", "crates/*", "circuits/*" ]
resolver = "2"

[workspace.dependencies]
anyhow            = "1.0"
async-trait       = "0.1"
config            = "0.13"
derive_more       = "0.99"
either            = { version = "1.9", features = [ "serde" ] }
itertools         = "0.12"
log               = "0.4"
pretty_assertions = "1.4"
pretty_env_logger = "0.5"
sled              = "0.34" # TODO: maybe heavy
thiserror         = "1.0"

# Async
axum    = "*"
borsh   = "1.3"
coerce  = { version = "0.8", features = [ "full" ] }
futures = "0.3"
reqwest = { version = "0.11", features = [ "gzip", "brotli", "deflate", "json" ] }
tokio   = { version = "1", features = [ "full" ] }

# Codec
hex        = { version = "0.4", features = [ "serde" ] }
protobuf   = "=3.2.0"
serde      = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

# TODO: upgrade
# Near specific
near-crypto             = "0.19"
near-jsonrpc-client     = "0.7"
near-jsonrpc-primitives = "0.19"
near-primitives         = "0.19"
near-primitives-core    = "0.19"

near-light-client-protocol = { path = "crates/protocol" }
near-light-client-rpc      = { path = "crates/rpc" }
near-light-clientx         = { path = "circuits/plonky2x" }
test-utils                 = { path = "crates/test-utils" }

# [patch."https://github.com/succinctlabs/succinctx.git"]
# plonky2x = { path = "./vendor/succinctx/plonky2x/core" }
