[workspace.package]
edition = "2021"
license = "MIT"
version = "0.3.0"

[workspace]
members  = [ "bin/*", "crates/*", "nearx" ]
resolver = "2"

[workspace.dependencies]
anyhow            = "1.0"
async-trait       = "0.1"
config            = "0.13"
derive_more       = "0.99"
either            = { version = "1.9", features = [ "serde" ] }
itertools         = "0.12"
log               = "0.4"
pretty_assertions = "1.4"
pretty_env_logger = "0.5"
sled              = "0.34" # TODO: maybe heavy, use heed instead
thiserror         = "1.0"

# Async
axum    = "*"
borsh   = "1.3"
coerce  = { version = "0.8", features = [ "full" ] }
futures = "0.3"
reqwest = { version = "0.11", features = [ "gzip", "brotli", "deflate", "json" ] }
tokio   = { version = "1", features = [ "full" ] }

# Codec
hex        = { version = "0.4", features = [ "serde" ] }
protobuf   = "=3.2.0"
serde      = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

# Near specific
near-crypto             = "0.20"
near-jsonrpc-client     = "0.8"
near-jsonrpc-primitives = "0.20"
near-primitives         = "0.20"
near-primitives-core    = "0.20"

near-light-client-protocol = { path = "crates/protocol" }
near-light-client-rpc      = { path = "crates/rpc" }
near-light-clientx         = { path = "nearx" }
test-utils                 = { path = "crates/test-utils" }

[patch."https://github.com/succinctlabs/starkyx.git"]
starkyx = { git = "https://github.com/dndll/starkyx.git" }
#curta = { path = "./vendor/starkyx/starkyx" }

[patch."https://github.com/succinctlabs/succinctx.git"]
#plonky2x = { path = "./vendor/succinctx/plonky2x/core" }
plonky2x = { git = "https://github.com/dndll/succinctx.git" }
