[package]
edition = "2021"
name    = "near-light-client-circuits"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh.workspace = true
ethers          = "2.0.11"
serde.workspace = true

# Circuits
plonky2  = { git = "https://github.com/mir-protocol/plonky2.git" }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }

[dev-dependencies]
near-light-client-protocol = { path = "../../crates/protocol" }
serde_json.workspace       = true

# [workspace]
# members = []
