[package]
edition = "2021"
name    = "near-light-clientxold"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
borsh.workspace       = true
ethers                = "2.0.11"
hex.workspace         = true
log.workspace         = true
pretty_assertions     = "1.4.0"
serde.workspace       = true
# Circuits
plonky2  = { git = "https://github.com/mir-protocol/plonky2.git" }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }

near-light-client-protocol.workspace = true
near-light-client-rpc.workspace      = true

[dev-dependencies]
borsh.workspace             = true
near-primitives.workspace   = true
pretty_env_logger.workspace = true
serde_json.workspace        = true
serial_test                 = "3"
test-utils.workspace        = true
tokio.workspace             = true

[features]
beefy-tests = [  ]
default     = [ "beefy-tests" ]
