[package]
edition.workspace = true
license.workspace = true
name              = "near-light-client-primitives"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config.workspace               = true
log.workspace                  = true
near-primitives-core.workspace = true
serde.workspace                = true
