[package]
edition.workspace = true
license.workspace = true
name              = "near-light-client-protocol"
version.workspace = true

# Ideally, we should depend on as minimal dependencies as possible
[dependencies]
anyhow.workspace                  = true
borsh.workspace                   = true
either.workspace                  = true
itertools.workspace               = true
log.workspace                     = true
near-crypto.workspace             = true
near-jsonrpc-primitives.workspace = true
near-primitives-core.workspace    = true
near-primitives.workspace         = true
serde.workspace                   = true
thiserror.workspace               = true

near-light-client-primitives.workspace = true
# async-trait.workspace          = true
# axum.workspace                 = true
# coerce.workspace               = true
# config.workspace               = true
# near-jsonrpc-client.workspace  = true
# protobuf.workspace             = true
# reqwest.workspace              = true
# sled.workspace                 = true

[dev-dependencies]
hex.workspace               = true
pretty_env_logger.workspace = true
rand                        = "*"
serde_json.workspace        = true
test-utils.workspace        = true
