[package]
edition.workspace = true
license.workspace = true
name              = "test-utils"
version.workspace = true

[dependencies]
derive_more.workspace                = true
log.workspace                        = true
near-light-client-protocol.workspace = true
near-primitives.workspace            = true
pretty_assertions.workspace          = true
pretty_env_logger.workspace = true
serde.workspace = true
serde_json.workspace        = true
